--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,28 +13,11 @@
 
   <body>
 
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark py-4">
-  <%= link_to 'Chess Online', root_path, class:"navbar-brand align-top"%>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-    <div class="navbar-nav">
-      
-      <a class="nav-item nav-link" href="#">
-        <% if current_user%>
-          <%= link_to "Logout", destroy_user_session_path, method: :delete, class: "nav-link active" %>
-        <% else %>
-          <%= link_to "Login", new_user_session_path, class: "nav-link active" %>
-        <% end %>
-      </a>
-
-    </div>
-  </div>
-  </nav>
+  <%= render 'header/header'%>  
 
     <div class="container mb-5">
       <%= yield %>
     </div>
   </body>
+
 </html>
