--- a/app/views/games/_board.html.erb
+++ b/app/views/games/_board.html.erb
@@ -21,3 +21,20 @@
     <%= game.fen %>
   <% end %>
 <% end %>
+<p>
+<% if current_user.avatar.attached? %>
+  <%= image_tag current_user.avatar, class: 'avatar' %>
+<% end %>
+</p>
+
+<style>
+      .avatar {
+        width: 50px;
+        height: 50px;
+        background-size: cover;
+        display: block;
+        border-radius: 100px;
+        -webkit-border-radius: 100px;
+        -moz-border-radius: 100px;
+      }
+</style>
