--- a/app/views/layouts/_players.html.erb
+++ b/app/views/layouts/_players.html.erb
@@ -1,4 +1,7 @@
-<% @users.each do |user| %>
+<% if current_user.avatar.attached? %>
+<%= image_tag current_user.avatar, class: "avatar" %>
+<% end %>
+<% @users.each do |user| %>  
     <% games = current_user.game_in_progress_with(user) %>
     <p>You are playing with <%= user.email %> <%= games.count %> games</p>
     <% games.each do |game| %>
